<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>me.lauriichan.minecraft.wildcard</groupId>
    <artifactId>wildcard-parent</artifactId>
    <version>2.0.0</version>
    <packaging>pom</packaging>

    <properties>
        <wildcard.id>wildcard</wildcard.id>
        <wildcard.name>Wildcard</wildcard.name>
        <wildcard.author>Lauriichan</wildcard.author>
    </properties>

    <modules>
        <module>wildcard-core</module>
        <module>wildcard-vanilla</module>
        <module>wildcard-sponge</module>
    </modules>

    <dependencies>
        <!-- Test -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>